# gemci

./: .flake8  CDash.md  CMakeLists.txt  CMakePresets.json  Design.md  README.md  buildfile.m  ci.cmake  libraries.json  options.cmake  pyproject.toml  setup.m
.github/workflows/: ci.yml
.github/workflows/composite-pkg/: action.yml
archive/: FindGemini3D.cmake  gemci.cmake
cfg/: README.md
cfg/daily/KHI_periodic_lowres/: config.nml  efield.m  perturb_efield.m  perturb_efield.py  perturb_efieldBG.m  perturb_efield_bridge.m
cfg/daily/KHI_periodic_lowres_hwm14/: config.nml  efield.m  perturb_efield.m  perturb_efield.py  perturb_efieldBG.m  perturb_efield_bridge.m
cfg/daily/cusp_softprecip2D_Dirich_hwm14/: config.nml
cfg/daily/cusp_softprecip2D_Neu_CI/: config.nml
cfg/daily/cusp_softprecip2D_Neu_hwm14/: config.nml
cfg/daily/tohoku20112D_medres_2Dneu_hwm14/: config.nml
cfg/daily/tohoku20112D_medres_axineu/: config.nml
cfg/daily/tohoku20113D_lowres_3Dneu/: config.nml
cfg/daily/tohoku20113D_lowres_axineu/: config.nml
cfg/daily/tohoku20113D_lowres_axineu_hwm14/: config.nml
cfg/equilibrium/arcs_eq/: config.nml
cfg/equilibrium/cusp3d_eq/: config.nml
cfg/equilibrium/mini2dns_eq/: config.nml
cfg/equilibrium/mini2dns_msis2_eq/: config.nml
cfg/equilibrium/mini3d_eq/: config.nml
cfg/equilibrium/mini3d_msis2_eq/: config.nml
cfg/equilibrium/tohoku3d_eq/: README.md  config.nml
cfg/hourly/GDI_periodic_lowres/: Efield.m  config.nml  perturb.m  perturb.py
cfg/hourly/GDI_periodic_lowres_hwm14/: Efield.m  config.nml  perturb.m  perturb.py
cfg/hourly/arcs/: Jcurrent_gaussian_tanh.py  config.nml  precip_shape.py
cfg/hourly/arcs/archive/: particles_BCs_angle_wide.m
cfg/hourly/arcs_hwm14/: precip_shape.py
cfg/hourly/arcs_hwm14/archive/: Efield_BCs_angle_wide.m
cfg/hourly/mini2dew_fang/: config.nml
cfg/hourly/mini2dew_glow/: config.nml
cfg/hourly/mini2dew_hwm14/: config.nml
cfg/hourly/mini2dew_hwm14_glow/: config.nml
cfg/hourly/mini2dns_fang/: config.nml
cfg/hourly/mini2dns_glow/: config.nml
cfg/hourly/mini2dns_hwm14/: config.nml
cfg/hourly/mini2dns_hwm14_glow/: config.nml
cfg/hourly/mini3d_fang/: config.nml
cfg/hourly/mini3d_glow/: config.nml
cfg/hourly/mini3d_hwm14_fang/: config.nml
cfg/hourly/mini3d_hwm14_glow/: config.nml
cfg/mag/arcs/: Readme.md  config.nml
cmake/: GeminiCompare.cmake  GeminiPackage.cmake  GeminiPlot.cmake  GeminiRun.cmake  GetEquil.cmake  InputSetup.cmake  MatlabTest.cmake  ModelSetup.cmake  ParseNml.cmake  archive.cmake  build_gemini3d.cmake  connectivity.cmake  download_input.cmake  download_ref.cmake  gemci.cmake  gemini3d.cmake  get_plan_cpu.cmake  get_simroot.cmake  libraries.cmake  libraries.json  matlab.cmake  neutral_data.json  options.cmake  plot_archive.cmake  python.cmake  ref_data.json  reference_url.json  system_meta.cmake  upload.cmake
cmake/Modules/: FindGemini3D.cmake
doc/: CDash.md  RegenData.md
scripts/: Readme.md  ci-gnu.sh  ci-oneapi.sh  ci-prep.sh  ci-run.sh  download_refdata.cmake
src/: CMakeLists.txt
